--- a/person/css/main.css
+++ b/person/css/main.css
@@ -168,10 +168,26 @@ a {
 	.photo-hiden {
 		display: none;
 	}
-	  
+
+	
+	.video {
+		position: relative;
+		width: 100%;
+		padding-top: 56.25%;
+	}
+
+	.video iframe {
+		position: absolute;
+		top: 0;
+		right: 0;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+	}  
 
 
-	  /*         ------------------------------------SLIDER--------------------------------------        */
+	  /*         ------------------------------------ADAPT--------------------------------------        */
 
 
 	  @media only screen and (max-width : 992px) {
